@@ -19,6 +19,36 @@ model.matrix.survreg <- function(object, ...) {
                        data = model.frame(object))
 }
 
+### coxme objects
+coxmecoef <- function(object)
+   object$coef$fixed
+
+coxmevcov <- function(object) {
+   cf <- object$coef$fixed 
+   vcov <- object$variance 
+   ### fix effects are last
+   indx <- sort(rev(1:nrow(vcov))[1:length(cf)])
+   vcov <- vcov[indx, indx, drop = FALSE]
+   rownames(vcov) <- names(cf)
+   colnames(vcov) <- names(cf)
+   vcov
+}
+
+model.frame.coxme <- function(formula, ...) {
+    fm <- formula$formulaList$fixed
+    mf <- formula$call
+    m <- match(c("formula", "data"), names(mf), 0L)
+    mf <- mf[c(1L, m)]
+    mf[[1L]] <- as.name("model.frame")
+    mf[[2L]] <- fm
+    mf <- eval(mf, environment(fm))
+    mf
+}
+
+model.matrix.coxme <- multcomp:::model.matrix.coxph
+
+
+
 model.matrix.aovlist <- function(object, ...)
     stop(sQuote("glht"), " does not support objects of class ", 
          sQuote("aovlist"))
@@ -109,6 +139,8 @@ modelparm.survreg <- function(model, coef. = coef, vcov. = vcovsurvreg, df = NUL
 modelparm.aovlist <- function(model, coef. = coef, vcov. = vcov, df = NULL, ...)
     stop(sQuote("glht"), " does not support objects of class ", sQuote("aovlist"))
 
+modelparm.coxme <- function(model, coef. = coxmecoef, vcov. = coxmevcov, df = NULL, ...)
+    modelparm.default(model, coef. = coef., vcov. = vcov., df = df, ...)
 
 ### modified from package MASS  
 MPinv <- function (X, tol = sqrt(.Machine$double.eps))
